@@ -1,3 +1,6 @@
+Wed, 13 Dec 2006 01:28:11 +0100 <thp@perli.net>
+        * src/gpodder/libpodcasts.py: Bugfix for newest_pubdate_downloaded
+
 Wed, 13 Dec 2006 01:22:30 +0100 <thp@perli.net>
         * src/gpodder/gpodder.py: Utilize a FileChooserButton instead of
           "emulating" it using our own widgets and methods
